--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@ header, footer {
   background-color: darkslateblue;
 }
 
+/* match header with footer */
+
 header h1, header h2, footer p {
   color: white;
   text-align: center;
@@ -31,6 +33,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+  height: 600px;
   padding-top: 10px;
   padding-bottom: 20px;
 }
@@ -39,20 +42,32 @@ hr {
   
 }
 
-h1, h2, p {
+h2, h3, p {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
-h1, h2 {
+h1, h2, h3 {
   text-align: center;
 }
 
 ul {
-  margin-left: 6%;
+  margin-right: 10%;
+  margin-left: 10%;
+  font-size: 20px;
 }
 
+/* bring in paragraphs more towards the middle */
+
 p {
+  font-size: 20px;
   margin-left: 10%;
   margin-right: 10%;
 }
+
+ol {
+  margin-right: 10%;
+  margin-left: 10%;
+  font-size: 20px;
+}
+
 
